# langgraph-adtech

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
agent/: __init__.py  graph.py  state.py
agent/nodes/: __init__.py  auction_agent.py  budget_agent.py  simulation_agent.py  strategy_agent.py  supervisor.py
agent/tools/: __init__.py  bid_calculator.py  budget_allocator.py  competitor_analyzer.py  pattern_scanner.py  roi_estimator.py  simulation_runner.py  slot_ranker.py
airflow/dags/: benchmark_suite.py  dbt_refresh.py  langsmith_export.py  sagemaker_finetune.py
api/: main.py  metrics.py
api/middleware/: auth.py  guardrails.py
data/: generator.py  schema.py
data/sources/: google_ads.py  meta_ads.py  semrush.py
eval/: benchmark_runner.py
eval/evaluators/: outcome_eval.py  tool_call_accuracy.py  trajectory_eval.py
eval/scenarios/: sc_001_low_budget_high_competition.json  sc_051_retargeting_campaign.json  sc_106_time_sensitive_auction.json
frontend/: package-lock.json  package.json  tailwind.config.ts  tsconfig.tsbuildinfo
frontend/.next/: app-build-manifest.json  trace
frontend/app/: globals.css  layout.tsx
frontend/lib/: format.ts  mock-data.ts  use-count-up.ts
frontend/src/: App.jsx
guardrails/: config.yml
guardrails/rules/: bid_limits.co  category_blocks.co
infra/terraform/: cognito.tf  eks.tf  iam.tf  main.tf  msk.tf  snowflake.tf  variables.tf
k8s/helm/: values.yaml
streaming/consumers/: redis_updater.py  snowflake_sink.py
streaming/producers/: ad_api_producer.py
training/nemo/: finetune_config.yaml
training/sagemaker/: pipeline.py  train.py
warehouse/dbt/: dbt_project.yml  profiles.yml
(+102 files in other folders)
